--- a/newnote_1582034343463.html
+++ b/newnote_1582034343463.html
@@ -1,1 +1,1 @@
-<h1>TODO</h1><p><br></p><p><br></p><h1>Done</h1><attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-447feec5-92b1-4b4c-be90-5d67a24cd3e6"></attachment><p><br></p>
+<h1>TODO</h1><ul data-checked="false"><li>看C++的通讯管理系统</li></ul><p><br></p><h1>Done</h1><attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-447feec5-92b1-4b4c-be90-5d67a24cd3e6"></attachment><p><br></p>
